# lattice-commit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  aider.md  claude_code.md  cursor.md  standalone.py
lattice_commit/: __init__.py  __main__.py  cli.py  core.py  gui.py  smoke.py
site/: DEPLOY.md  index.html
tests/: test_smoke.py
