[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice-commit"
version = "0.1.1"
description = "Git-native incremental checkpointing for test-gated LLM code repair"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Bentley Moon", email = "bentleymoonperkins@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["llm", "code-repair", "testing", "incremental-commit", "automated-repair"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
lattice-commit = "lattice_commit.cli:main"

[project.urls]
Homepage = "https://github.com/Vingadden/lattice-commit"
Issues = "https://github.com/Vingadden/lattice-commit/issues"
Paper = "https://github.com/Vingadden/lattice-commit/blob/main/PAPER.md"

[tool.hatch.build.targets.wheel]
packages = ["lattice_commit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
